Complete exercise and challenge parts 1&2: test and create 'GET /albums', 'GET /artists/:id', 'GET /artists' using links'

--- a/music_library_database_app/views/albums.erb
+++ b/music_library_database_app/views/albums.erb
@@ -2,12 +2,8 @@
   <head></head>
   <body>
     <h1>Albums</h1>
-
     <% @albums.each do |album| %>
-      <div>
-        Title: <%= album.title %>
-        Released: <%= album.release_year %>
-      </div>
+      <a href="/albums/<%= album.id %>"><%= album.title %></a><br>
     <% end %>
   </body>
 </html>
