Complete exercise: test and implement creating a form to add an album

--- a/music_library_database_app/views/album.erb
+++ b/music_library_database_app/views/album.erb
@@ -3,7 +3,7 @@
   <body>
     <h1><%= @album.title %></h1>
     <p>
-      Release year: <%= @album.release_year %>
+      Release year: <%= @album.release_year %><br>
       Artist: <%= @artist.name %>
     </p>
   </body>
