--- a/music_library_database_app/views/album_new.erb
+++ b/music_library_database_app/views/album_new.erb
@@ -6,8 +6,10 @@
     <label>Album title: </label>
     <input type="text" name="title" /><br>
     <label>Release year: </label>
-    <input type="int" name="release_year" /><br>
+    <input type="number" name="release_year" /><br>
     <label>Artist ID: </label>
-    <input type="int" name="artist_id" />
+    <input type="number" name="artist_id" />
+    <input type="submit" />
+    </form>
 </body>
 </html>
